--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -28,6 +28,7 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
+          API_CLIENT_URL: ${{ vars.API_CLIENT_URL }}
         run: docker compose -f stacks/prod/docker-compose.yml -p prod_community_eventsresonite --profile "*" build
 
       - name: Update 3rd party docker images
@@ -45,6 +46,7 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
+          API_CLIENT_URL: ${{ vars.API_CLIENT_URL }}
         run: docker compose -f stacks/prod/docker-compose.yml -p prod_community_eventsresonite --profile "*" pull
 
       - name: Spin up containers
@@ -62,4 +64,5 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
+          API_CLIENT_URL: ${{ vars.API_CLIENT_URL }}
         run: docker compose -f stacks/prod/docker-compose.yml -p prod_community_eventsresonite --profile "*" up -d
