--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,6 @@ sentry-sdk = "^2.20.0"
 psycopg = {extras = ["binary"], version = "^3.2.4"}
 psycopg2-binary = "^2.9.10"
 geoip2 = "^5.0.1"
-fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
 deprecated = "^1.2.18"
 paramiko = "^3.5.1"
 apachelogs = "^0.6.1"
@@ -51,6 +50,7 @@ docs = "server_docs:run"
 
 [tool.poetry.group.dev.dependencies]
 alembic = "^1.14.1"
+pytest = "^8.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
